--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Пополнение счета</title>
 </head>
 <body>
     <section>
@@ -128,7 +128,7 @@
                         <div class="product-cover">
                             <div class="product-cover-text">
                                 <p class="product-item-text">Ожидаемая доходность в рамках стандартной стратегии доверительного управления «Максимум»</p>
-                                <a class="product-item-link" href="#">Подробнее</a>
+                                <a class="product-item-link" href="#">Перейти</a>
                             </div>
                             <div class="product-cover-img">
                                 <img class="product-cover-img-img" src="https://kurzan.github.io/pay-form/images/products/du_array.png" alt="">
@@ -140,7 +140,7 @@
                         <div class="product-cover">
                             <div class="product-cover-text">
                                 <p class="product-item-text">Инвестиции в ценные бумаги, драгоценные металлы и иностранную валюту</p>
-                                <a class="product-item-link" href="#">Подробнее</a>
+                                <a class="product-item-link" href="#">Перейти</a>
                             </div>
                             <div class="product-cover-img">
                                 <img class="product-cover-img-img" src="https://kurzan.github.io/pay-form/images/products/shop.png" alt="">
@@ -148,14 +148,14 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <h3 class="product-item-title">Магазин финансовых продуктов</h3>
+                        <h3 class="product-item-title">Telegram-канал </h3>
                         <div class="product-cover">
                             <div class="product-cover-text">
                                 <p class="product-item-text">Инвестиции в ценные бумаги, драгоценные металлы и иностранную валюту</p>
-                                <a class="product-item-link" href="#">Подробнее</a>
+                                <a class="product-item-link" href="#">Перейти</a>
                             </div>
                             <div class="product-cover-img">
-                                <img class="product-cover-img-img" src="https://kurzan.github.io/pay-form/images/products/shop.png" alt="">
+                                <img class="product-cover-img-img" src="/images/products/Telegram_2019_Logo.svg.png" alt="">
                             </div>
                         </div>
                     </div>
