--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                 <a class="product-item-link" href="#">Перейти</a>
                             </div>
                             <div class="product-cover-img">
-                                <img class="product-cover-img-img" src="/images/products/Telegram_2019_Logo.svg.png" alt="">
+                                <img class="product-cover-img-img" src="https://github.com/kurzan/pay-form/images/products/Telegram_2019_Logo.svg.png" alt="">
                             </div>
                         </div>
                     </div>
