--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="nfkapp">
                     <p class="nfkapp-text">Нажмите, чтобы скачать и <mark class="nfkapp-text-mark">активировать</mark> приложение "НФК-Себрежения"</p>
                     <div class="nfkapp-cover">
-                        <img class="nfkapp-img" id="openApp" src="https://github.com/kurzan/pay-form/images/nfksber.png" alt="">
+                        <img class="nfkapp-img" id="openApp" src="https://kurzan.github.io/pay-form/images/nfksber.png" alt="">
                     </div>
                     <div class="closeModal"></div>
                 </div>
@@ -165,7 +165,7 @@
                                 <a class="product-item-link" href="#">Перейти</a>
                             </div>
                             <div class="product-cover-img">
-                                <img class="product-cover-img-img" src="https://github.com/kurzan/pay-form/images/products/Telegram_2019_Logo.svg.png" alt="">
+                                <img class="product-cover-img-img" src="https://kurzan.github.io/pay-form/images/Telegram_2019_Logo.svg.png" alt="">
                             </div>
                         </div>
                     </div>
