--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
                     </div>
                 </div>
                 <div class="nfkapp">
-                    <p class="nfkapp-text">Нажмите, чтобы скачать и <mark class="nfkapp-text-mark">активировать</mark> приложение "НФК-Себрежения"</p>
+                    <p class="nfkapp-text">Нажмите, чтобы скачать и активировать приложение "НФК-Себрежения"</p>
                     <div class="nfkapp-cover">
                         <img class="nfkapp-img" id="openApp" src="https://kurzan.github.io/pay-form/images/nfksber.png" alt="">
                     </div>
-                    <div class="closeModal"></div>
                 </div>
                 <div class="products">
                     <h1>Популярные продукты</h1>
