--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="main-pay-page">
                 <div class="pay">
                     <div class="pay-main-title">
-                        <h1>Добрый день, Михаил Юрьевич!
+                        <h1>Добрый день, Михаил!
                         </br> 
                         Выберите способ пополнения:</h1>
                     </div>
