--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="pay-main-title">
                         <h1>Добрый день, Михаил!
                         </br> 
-                        Выберите способ пополнения:</h1>
+                        Выберите способ пополнения!:</h1>
                     </div>
                     <div class="tabs">
                         <input type="radio" name="tab-btn" id="tab-btn-1" value="" checked>
